--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from '../components/BaseHead.vue';
 import Navigation from '../components/Navigation.vue';
+import '../styles/code.css';
 
 const { title, description, image } = Astro.props;
 ---
@@ -13,6 +14,7 @@ const { title, description, image } = Astro.props;
   <body class="min-h-screen bg-cream-100 dark:bg-gray-900 transition-colors duration-200">
     <Navigation client:load />
     <slot />
+    <script src="../scripts/copy-code.ts"></script>
   </body>
 </html>
 
