--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -27,7 +27,7 @@ const interests = [
           </h1>
           <div class="w-20 h-1 bg-gradient-to-r from-blue-600 to-indigo-600 mx-auto mb-8"></div>
           <p class="text-lg text-slate-600 dark:text-slate-300 mb-8 leading-relaxed">
-            你好！我是一名热爱折腾的业余程序员。喜欢探索新技术，享受编程带来的乐趣。
+            业余/菜鸡程序员
           </p>
           <SocialLinks />
         </div>
